// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should render Title with default properties 1`] = `
<div>
  <h3
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 bxzizz"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="1.5625rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;

exports[`<Title /> should render Title with variant "large" 1`] = `
<div>
  <h1
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 bvpZBu"
    color="hsla(217, 18%, 45%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="2.5rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying Landing Page Title
  </h1>
</div>
`;

exports[`<Title /> should render Title with variant "medium" 1`] = `
<div>
  <h2
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 QOio"
    color="hsla(216, 16%, 60%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="1.75rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying Landing Page Title
  </h2>
</div>
`;

exports[`<Title /> should render Title with variant "small" 1`] = `
<div>
  <h3
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 bxzizz"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="1.5625rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;
